# MyLittleEngine

./: .gitignore  CMakeLists.txt  README.md  features.md
.github/workflows/: emscripten_publish.yml  run_tests.yml
emscripten/: main.html
html_test/: package.json  server.js
html_test/public/: main.html
sandbox/: CMakeLists.txt  mesh_visualizer.cpp  test.ts  test_0.cpp
scripts/: build.sh  build.ts
src/api/: c_api.cpp  c_api.h
src/assets/: image.hpp  mesh.hpp
src/assets/loader/: image_jpg.hpp  mesh.hpp  mesh_obj.hpp
src/assets/loader/impl/: image_jpg_impl.hpp
src/cor/: algorithm.hpp  allocations.hpp  assertions.hpp  byte_structs.hpp  concepts.hpp  container.hpp  cor.hpp  hash.hpp  orm.hpp  traits.hpp  types.hpp  v2.hpp
src/eng/: api.cpp  engine.hpp  input.hpp  scene.hpp  time.hpp  tmp_renderer.hpp  window.hpp
src/m/: color.hpp  const.hpp  fix.hpp  fixed_utils.hpp  geom.hpp  mat.hpp  math.hpp  number.hpp  numbers_template.hpp  polygon.hpp  quat.hpp  rect.hpp  trig.hpp  vec.hpp
src/rast/: algorithm.hpp  image_texture.hpp  model.hpp  rast.hpp
src/rast/impl/: algorithm.hpp  rast_impl.hpp
src/ren/: algorithm.hpp  model.hpp  program_definition.hpp  ren.hpp  shader_definition.hpp
src/ren/impl/: algorithm.hpp  ren_impl.hpp
src/shared/: types.hpp
src/sys/: clock.hpp  clock_fixed_impl.hpp  clock_impl.hpp  clock_linux_impl.hpp  sys.cpp  sys.hpp  sys_impl.hpp  win.cpp  win.hpp  win_emscripten.cpp  win_emscripten_impl.hpp  win_headless.cpp  win_headless_impl.hpp  win_impl.hpp  win_linux.cpp  win_linux_impl.hpp
src/tst/: test_assets.cpp  test_clock.cpp  test_common.cpp  test_common.hpp  test_container.cpp  test_container.hpp  test_core.cpp  test_engine.cpp  test_engine_common.hpp  test_engine_utils.hpp  test_math.cpp  test_math.hpp  test_numbers.cpp  test_rasterizer.cpp  test_rasterizer.hpp  test_rasterizer_assets.cpp  test_rasterizer_assets.hpp  test_rasterizer_v2.cpp  test_ren.cpp  test_ren_cube.cpp  test_window.cpp  test_window.hpp  tests.cpp
tp/emscripten/emscripten/: version.h
